# paxos

./: Cargo.toml  README.md
src/: acceptor.rs  learner.rs  lib.rs  message.rs  proposer.rs
tests/: basic_paxos.rs
