[package]
name = "paxos-rust"
description = "A lightweight implementation of the Paxos Consensus Algorithm"
version = "0.2.0"
authors = ["Cam <cirmas@protonmail.com>"]
exclude = [
  "tests/*"
]
readme = "README.md"
keywords = ["consensus"]
license-file = "LICENSE"
repository = "https://github.com/camirmas/paxos"

[dependencies]
